src_old_backup/driver/ajinextek/AXL(Library)/Visual Basic(Net)/AXDev.vb

Option Strict Off
Option Explicit On
Module AXDev



    ' Board Number를 이용하여 Board Address 찾기
    Public Declare Function AxlGetBoardAddress Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef upBoardAddress As Integer) As Integer
    ' Board Number를 이용하여 Board ID 찾기
    Public Declare Function AxlGetBoardID Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef upBoardID As Integer) As Integer
    ' Board Number를 이용하여 Board Version 찾기
    Public Declare Function AxlGetBoardVersion Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef upBoardVersion As Integer) As Integer
    ' Board Number와 Module Position을 이용하여 Module ID 찾기
    Public Declare Function AxlGetModuleID Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByRef upModuleID As Integer) As Integer
    ' Board Number와 Module Position을 이용하여 Module Version 찾기
    Public Declare Function AxlGetModuleVersion Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByRef upModuleVersion As Integer) As Integer
    ' Board Number와 Module Position을 이용하여 Network Node 정보 확인
    Public Declare Function AxlGetModuleNodeInfo Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByRef upNetNo As Integer, ByRef upNodeAddr As Integer) As Integer

    ' Board에 내장된 범용 Data Flash Write (PCI-R1604[RTEX master board]전용)
    ' lPageAddr(0 ~ 199)
    ' lByteNum(1 ~ 120)
    ' 주의) Flash에 데이타를 기입할 때는 일정 시간(최대 17mSec)이 소요되기때문에 연속 쓰기시 지연 시간이 필요함.
    Public Declare Function AxlSetDataFlash Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lPageAddr As Integer, ByVal lBytesNum As Integer, ByRef bpSetData As Byte) As Integer

    ' Board에 내장된 ESTOP 외부 입력 신호를 이용한 InterLock 기능 사용 유무 및 디지털 필터 상수값 정의 (PCI-Rxx00[MLIII master board]전용)
    ' 1. 사용 유무
    '   설명: 기능 사용 설정후 외부에서 ESTOP 신호 인가시 보드에 연결된 모션 제어 노드에 대해서 ESTOP 구동 명령 실행
    '    0: 기능 사용하지 않음(기본 설정값)
    '    1: 기능 사용
    ' 2. 디지털 필터 값
    '      입력 필터 상수 설정 범위 1 ~ 40, 단위 통신 Cyclic time
    ' Board 에 dwInterLock, dwDigFilterVal을 이용하여 EstopInterLock 기능 설정
    Public Declare Function AxlSetEStopInterLock Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwInterLock As Integer, ByVal dwDigFilterVal As Integer) As Integer
    ' Board에 설정된 dwInterLock, dwDigFilterVal 정보를 가져오기
    Public Declare Function AxlGetEStopInterLock Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef dwInterLock As Integer, ByRef dwDigFilterVal As Integer) As Integer
    ' Board에 입력된 EstopInterLock 신호를 읽는다.
    Public Declare Function AxlReadEStopInterLock Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef dwInterLock As Integer) As Integer

    ' Board에 내장된 범용 Data Flash Read(PCI-R1604[RTEX master board]전용)
    ' lPageAddr(0 ~ 199)
    ' lByteNum(1 ~ 120)
    Public Declare Function AxlGetDataFlash Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lPageAddr As Integer, ByVal lBytesNum As Integer, ByRef bpGetData As Byte) As Integer

    ' Board Number와 Module Position을 이용하여 AIO Module Number 찾기
    Public Declare Function AxaInfoGetModuleNo Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByRef lpModuleNo As Integer) As Integer
    ' Board Number와 Module Position을 이용하여 DIO Module Number 찾기
    Public Declare Function AxdInfoGetModuleNo Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByRef lpModuleNo As Integer) As Integer

    ' 지정 축에 IPCOMMAND Setting
    Public Declare Function AxmSetCommand Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte) As Integer
    ' 지정 축에 8bit IPCOMMAND Setting
    Public Declare Function AxmSetCommandData08 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByVal uData As Integer) As Integer
    ' 지정 축에 8bit IPCOMMAND 가져오기
    Public Declare Function AxmGetCommandData08 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByRef upData As Integer) As Integer
    ' 지정 축에 16bit IPCOMMAND Setting
    Public Declare Function AxmSetCommandData16 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByVal uData As Integer) As Integer
    ' 지정 축에 16bit IPCOMMAND 가져오기
    Public Declare Function AxmGetCommandData16 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByRef upData As Integer) As Integer
    ' 지정 축에 24bit IPCOMMAND Setting
    Public Declare Function AxmSetCommandData24 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByVal uData As Integer) As Integer
    ' 지정 축에 24bit IPCOMMAND 가져오기
    Public Declare Function AxmGetCommandData24 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByRef upData As Integer) As Integer
    ' 지정 축에 32bit IPCOMMAND Setting
    Public Declare Function AxmSetCommandData32 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByVal uData As Integer) As Integer
    ' 지정 축에 32bit IPCOMMAND 가져오기
    Public Declare Function AxmGetCommandData32 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByRef upData As Integer) As Integer

    ' 지정 축에 QICOMMAND Setting
    Public Declare Function AxmSetCommandQi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte) As Integer
    ' 지정 축에 8bit QICOMMAND Setting
    Public Declare Function AxmSetCommandData08Qi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByVal uData As Integer) As Integer
    ' 지정 축에 8bit QICOMMAND 가져오기
    Public Declare Function AxmGetCommandData08Qi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByRef upData As Integer) As Integer
    ' 지정 축에 16bit QICOMMAND Setting
    Public Declare Function AxmSetCommandData16Qi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByVal uData As Integer) As Integer
    ' 지정 축에 16bit QICOMMAND 가져오기
    Public Declare Function AxmGetCommandData16Qi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByRef upData As Integer) As Integer
    ' 지정 축에 24bit QICOMMAND Setting
    Public Declare Function AxmSetCommandData24Qi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByVal uData As Integer) As Integer
    ' 지정 축에 24bit QICOMMAND 가져오기
    Public Declare Function AxmGetCommandData24Qi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByRef upData As Integer) As Integer
    ' 지정 축에 32bit QICOMMAND Setting
    Public Declare Function AxmSetCommandData32Qi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByVal uData As Integer) As Integer
    ' 지정 축에 32bit QICOMMAND 가져오기
    Public Declare Function AxmGetCommandData32Qi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByRef upData As Integer) As Integer

    ' 지정 축에 Port Data 가져오기 - IP
    Public Declare Function AxmGetPortData Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wOffset As Integer, ByRef upData As Integer) As Integer
    ' 지정 축에 Port Data Setting - IP
    Public Declare Function AxmSetPortData Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wOffset As Integer, ByVal dwData As Integer) As Integer
    ' 지정 축에 Port Data 가져오기 - QI
    Public Declare Function AxmGetPortDataQi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal byOffset As Integer, ByRef wData As Integer) As Integer
    ' 지정 축에 Port Data Setting - QI
    Public Declare Function AxmSetPortDataQi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal byOffset As Integer, ByVal wData As Integer) As Integer

    ' 지정 축에 스크립트를 설정한다. - IP
    ' sc    : 스크립트 번호 (1 - 4)
    ' event : 발생할 이벤트 SCRCON 을 정의한다.
    '         이벤트 설정 축갯수설정, 이벤트 발생할 축, 이벤트 내용 1,2 속성 설정한다.
    ' cmd   : 어떤 내용을 바꿀것인지 선택 SCRCMD를 정의한다.
    ' data  : 어떤 Data를 바꿀것인지 선택
    Public Declare Function AxmSetScriptCaptionIp Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sc As Integer, ByVal event As Integer, ByVal data As Integer) As Integer
    ' 지정 축에 스크립트를 반환한다. - IP
    Public Declare Function AxmGetScriptCaptionIp Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sc As Integer, ByRef event As Integer, ByRef data As Integer) As Integer

    ' 지정 축에 스크립트를 설정한다. - QI
    ' sc    : 스크립트 번호 (1 - 4)
    ' event : 발생할 이벤트 SCRCON 을 정의한다.
    '         이벤트 설정 축갯수설정, 이벤트 발생할 축, 이벤트 내용 1,2 속성 설정한다.
    ' cmd   : 어떤 내용을 바꿀것인지 선택 SCRCMD를 정의한다.
    ' data  : 어떤 Data를 바꿀것인지 선택
    Public Declare Function AxmSetScriptCaptionQi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sc As Integer, ByVal event As Integer, ByVal cmd As Integer, ByVal data As Integer) As Integer
    ' 지정 축에 스크립트를 반환한다. - QI
    Public Declare Function AxmGetScriptCaptionQi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sc As Integer, ByRef event As Integer, ByRef cmd As Integer, ByRef data As Integer) As Integer

    ' 지정 축에 스크립트 내부 Queue Index를 Clear 시킨다.
    ' uSelect IP.
    ' uSelect(0): 스크립트 Queue Index 를 Clear한다.
    '        (1): 캡션 Queue를 Index Clear한다.
    ' uSelect QI.
    ' uSelect(0): 스크립트 Queue 1 Index 을 Clear한다.
    '        (1): 스크립트 Queue 2 Index 를 Clear한다.
    Public Declare Function AxmSetScriptCaptionQueueClear Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uSelect As Integer) As Integer

    ' 지정 축에 스크립트 내부 Queue의 Index 반환한다.
    ' uSelect IP
    ' uSelect(0): 스크립트 Queue Index를 읽어온다.
    '        (1): 캡션 Queue Index를 읽어온다.
    ' uSelect QI.
    ' uSelect(0): 스크립트 Queue 1 Index을 읽어온다.
    '        (1): 스크립트 Queue 2 Index를 읽어온다.
    Public Declare Function AxmGetScriptCaptionQueueCount Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef updata As Integer, ByVal uSelect As Integer) As Integer

    ' 지정 축에 스크립트 내부 Queue의 Data갯수 반환한다.
    ' uSelect IP
    ' uSelect(0): 스크립트 Queue Data 를 읽어온다.
    '        (1): 캡션 Queue Data를 읽어온다.
    ' uSelect QI.
    ' uSelect(0): 스크립트 Queue 1 Data 읽어온다.
    '        (1): 스크립트 Queue 2 Data 읽어온다.
    Public Declare Function AxmGetScriptCaptionQueueDataCount Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef updata As Integer, ByVal uSelect As Integer) As Integer

    ' 내부 데이타를 읽어온다.
    Public Declare Function AxmGetOptimizeDriveData Lib "AXL.dll" () As Integer


    ' 보드내에 레지스터를 Byte단위로 설정 및 확인한다.
    Public Declare Function AxmBoardWriteByte Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByVal byData As Byte) As Integer
    Public Declare Function AxmBoardReadByte Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByRef byData As Byte) As Integer

    ' 보드내에 레지스터를 Word단위로 설정 및 확인한다.
    Public Declare Function AxmBoardWriteWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByVal wData As Integer) As Integer
    Public Declare Function AxmBoardReadWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByRef wData As Integer) As Integer

    ' 보드내에 레지스터를 DWord단위로 설정 및 확인한다.
    Public Declare Function AxmBoardWriteDWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByVal dwData As Integer) As Integer
    Public Declare Function AxmBoardReadDWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByRef dwData As Integer) As Integer

    ' 보드내에 모듈에 레지스터를 Byte설정 및 확인한다.
    Public Declare Function AxmModuleWriteByte Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByVal wOffset As Integer, ByVal byData As Byte) As Integer
    Public Declare Function AxmModuleReadByte Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByVal wOffset As Integer, ByRef byData As Byte) As Integer

    ' 보드내에 모듈에 레지스터를 Word설정 및 확인한다.
    Public Declare Function AxmModuleWriteWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByVal wOffset As Integer, ByVal wData As Integer) As Integer
    Public Declare Function AxmModuleReadWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByVal wOffset As Integer, ByRef wData As Integer) As Integer
